; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-joystick.c_KillJoysticks.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-joystick.c_KillJoysticks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@jinited = common dso_local global i32 0, align 4
@MAX_JOYSTICKS = common dso_local global i32 0, align 4
@Joysticks = common dso_local global i64* null, align 8
@SDL_INIT_JOYSTICK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @KillJoysticks() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @jinited, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %36

6:                                                ; preds = %0
  store i32 0, i32* %2, align 4
  br label %7

7:                                                ; preds = %30, %6
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @MAX_JOYSTICKS, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %33

11:                                               ; preds = %7
  %12 = load i64*, i64** @Joysticks, align 8
  %13 = load i32, i32* %2, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i64, i64* %12, i64 %14
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %11
  %19 = load i64*, i64** @Joysticks, align 8
  %20 = load i32, i32* %2, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i64, i64* %19, i64 %21
  %23 = load i64, i64* %22, align 8
  %24 = call i32 @SDL_JoystickClose(i64 %23)
  br label %25

25:                                               ; preds = %18, %11
  %26 = load i64*, i64** @Joysticks, align 8
  %27 = load i32, i32* %2, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i64, i64* %26, i64 %28
  store i64 0, i64* %29, align 8
  br label %30

30:                                               ; preds = %25
  %31 = load i32, i32* %2, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %2, align 4
  br label %7

33:                                               ; preds = %7
  %34 = load i32, i32* @SDL_INIT_JOYSTICK, align 4
  %35 = call i32 @SDL_QuitSubSystem(i32 %34)
  store i32 1, i32* %1, align 4
  br label %36

36:                                               ; preds = %33, %5
  %37 = load i32, i32* %1, align 4
  ret i32 %37
}

declare dso_local i32 @SDL_JoystickClose(i64) #1

declare dso_local i32 @SDL_QuitSubSystem(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
